@@ -12,6 +12,13 @@ jeste lepe countdown do konce souteze? (nice to have)
 
 
 
+- chroust: hezke zobrazeni tabulky
+- symbol otazniku
+- scrolovani tabulky v hq pomoci drag and drop
+- v hq zobrazovat i reseni
+
+
+
 
 CHROUST
 -------
