@@ -180,3 +180,10 @@
 ; Enable this option only if you KNOW WHAT YOU ARE DOING
 ;
 ;check_key_order=1
+
+
+; Limits (in secs) for showing countdown to reveal next hint/solution
+; If the coundown value is lower then the specified limit, the coundown is displayed
+; If the limit value is zero, the countdown is always displayed
+;countdown_limit_hint=15m
+;countdown_limit_solution=15m
